crates/plotnik-tests/tests/02-parser/recovery_validation/capture_name_pascal_case_with_hyphens.txt
Q = (a) @My-Name
------------------ DIAGNOSTICS -------------------
error: capture names must be snake_case
 --> query.ptk:1:9
  |
1 | Q = (a) @My-Name
  |         ^^^^^^^^
  |
help: use `@my_name`
  |
1 - Q = (a) @My-Name
1 + Q = (a) @my_name
  |
help: capture names become result field names
